fixed small alignment issue in news section on homepage

--- a/resources/styles/sass/index.scss
+++ b/resources/styles/sass/index.scss
@@ -212,6 +212,6 @@
   li {
     font-size: 14px;
     width: 100%;
-    text-align: left;
+    text-align: left !important;
   }
 }
